// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/Button renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 27,
          "lineHeight": 33,
          "minHeight": 33,
        },
        [
          {
            "paddingHorizontal": 9,
          },
          undefined,
        ],
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`@lad-tech/mobydick-core/Button renders correctly 2`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 48,
      "opacity": 1,
      "paddingHorizontal": 18,
      "paddingVertical": 9,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#F54D3D",
          "fontFamily": "Inter-Bold",
          "fontSize": 27,
          "lineHeight": 33,
          "minHeight": 33,
        },
        [
          {
            "paddingHorizontal": 6,
          },
          undefined,
        ],
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`@lad-tech/mobydick-core/Button renders correctly destructive 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#F54D3D",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#FFF",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "minWidth": 36,
          "zIndex": 1,
        },
        {
          "marginLeft": 3,
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFF",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 24,
            "lineHeight": 30,
            "minHeight": 30,
          },
          {
            "color": "#F54D3D",
            "paddingHorizontal": 9,
            "textAlign": "center",
          },
        ]
      }
    >
      2
    </Text>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/Button renders correctly disabled 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#9BA1B0",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
    }
  }
/>
`;

exports[`@lad-tech/mobydick-core/Button renders correctly fixed 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
    }
  }
/>
`;

exports[`@lad-tech/mobydick-core/Button renders correctly large 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
      "paddingHorizontal": 18,
      "paddingVertical": 18,
    }
  }
/>
`;

exports[`@lad-tech/mobydick-core/Button renders correctly left icon size large 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
      "paddingHorizontal": 39,
      "paddingVertical": 18,
    }
  }
>
  <View />
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 27,
          "lineHeight": 33,
          "minHeight": 33,
        },
        [
          {
            "paddingHorizontal": 9,
          },
          undefined,
        ],
      ]
    }
  >
    text
  </Text>
  <View />
</View>
`;

exports[`@lad-tech/mobydick-core/Button renders correctly left icon size small 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 48,
      "opacity": 1,
      "paddingHorizontal": 21,
      "paddingVertical": 9,
    }
  }
>
  <View />
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 21,
          "lineHeight": 27,
          "minHeight": 27,
        },
        [
          {
            "paddingHorizontal": 6,
          },
          undefined,
        ],
      ]
    }
  >
    text
  </Text>
  <View />
</View>
`;

exports[`@lad-tech/mobydick-core/Button renders correctly left icon small 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 48,
      "opacity": 1,
      "paddingHorizontal": 9,
      "paddingVertical": 9,
    }
  }
>
  <View />
  <View />
</View>
`;

exports[`@lad-tech/mobydick-core/Button renders correctly loading 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "alignSelf": "center",
        "transform": [
          {
            "rotate": "0deg",
          },
        ],
      }
    }
  >
    <SvgMock
      fill="#FFF"
      height="24"
      width="24"
    />
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/Button renders correctly loading disabled 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#9BA1B0",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "alignSelf": "center",
        "transform": [
          {
            "rotate": "0deg",
          },
        ],
      }
    }
  >
    <SvgMock
      fill="#FFF"
      height="24"
      width="24"
    />
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/Button renders correctly loading types 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "transparent",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "alignSelf": "center",
        "transform": [
          {
            "rotate": "0deg",
          },
        ],
      }
    }
  >
    <SvgMock
      fill="#2B78EE"
      height="24"
      width="24"
    />
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/Button renders correctly loading types 2`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "rgba(43, 120, 238, 0.15)",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "alignSelf": "center",
        "transform": [
          {
            "rotate": "0deg",
          },
        ],
      }
    }
  >
    <SvgMock
      fill="#2B78EE"
      height="24"
      width="24"
    />
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/Button renders correctly loading types 3`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#FFF",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "minWidth": 36,
          "zIndex": 1,
        },
        {
          "marginLeft": 3,
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFF",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 24,
            "lineHeight": 30,
            "minHeight": 30,
          },
          {
            "color": "#2B78EE",
            "paddingHorizontal": 9,
            "textAlign": "center",
          },
        ]
      }
    >
      23
    </Text>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/Button renders correctly loading types 4`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "rgba(43, 120, 238, 0.15)",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#FFF",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "minWidth": 36,
          "zIndex": 1,
        },
        {
          "marginLeft": 3,
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFF",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 24,
            "lineHeight": 30,
            "minHeight": 30,
          },
          {
            "color": "#2B78EE",
            "paddingHorizontal": 9,
            "textAlign": "center",
          },
        ]
      }
    >
      23
    </Text>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/Button renders correctly loading types 5`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "transparent",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#2B78EE",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "minWidth": 36,
          "zIndex": 1,
        },
        {
          "marginLeft": 3,
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFF",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 24,
            "lineHeight": 30,
            "minHeight": 30,
          },
          {
            "color": "#FFF",
            "paddingHorizontal": 9,
            "textAlign": "center",
          },
        ]
      }
    >
      23
    </Text>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/Button renders correctly loading types 6`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#9BA1B0",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#FFF",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "minWidth": 36,
          "zIndex": 1,
        },
        {
          "marginLeft": 3,
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFF",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 24,
            "lineHeight": 30,
            "minHeight": 30,
          },
          {
            "color": "#9BA1B0",
            "paddingHorizontal": 9,
            "textAlign": "center",
          },
        ]
      }
    >
      23
    </Text>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/Button renders correctly loading types 7`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "alignSelf": "center",
        "transform": [
          {
            "rotate": "0deg",
          },
        ],
      }
    }
  >
    <SvgMock
      fill="#FFF"
      height="24"
      width="24"
    />
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/Button renders correctly loading types 8`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#F54D3D",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#FFF",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "minWidth": 36,
          "zIndex": 1,
        },
        {
          "marginLeft": 3,
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFF",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 24,
            "lineHeight": 30,
            "minHeight": 30,
          },
          {
            "color": "#F54D3D",
            "paddingHorizontal": 9,
            "textAlign": "center",
          },
        ]
      }
    >
      23
    </Text>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/Button renders correctly loading without type 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
    }
  }
/>
`;

exports[`@lad-tech/mobydick-core/Button renders correctly secondary 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "rgba(43, 120, 238, 0.15)",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
    }
  }
/>
`;

exports[`@lad-tech/mobydick-core/Button renders correctly small 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 48,
      "opacity": 1,
      "paddingHorizontal": 9,
      "paddingVertical": 9,
    }
  }
/>
`;

exports[`@lad-tech/mobydick-core/Button renders correctly small 2`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 48,
      "opacity": 1,
      "paddingHorizontal": 9,
      "paddingVertical": 9,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "alignSelf": "center",
        "transform": [
          {
            "rotate": "0deg",
          },
        ],
      }
    }
  >
    <SvgMock
      fill="#FFF"
      height="20"
      width="20"
    />
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/Button renders correctly tertiary 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "transparent",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 72,
      "opacity": 1,
    }
  }
/>
`;

exports[`@lad-tech/mobydick-core/Button renders correctly text 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 48,
      "opacity": 1,
      "paddingHorizontal": 18,
      "paddingVertical": 9,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 21,
          "lineHeight": 27,
          "minHeight": 27,
        },
        [
          {
            "paddingHorizontal": 6,
          },
          undefined,
        ],
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`@lad-tech/mobydick-core/Button renders correctly without size 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
    }
  }
/>
`;
